--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </header>
             <section class="content">
                 <div class="flex-column">
-                    <div>Recipe title</div>
+                    <label>Recipe title</label>
                     <input type="text" name="firstname" placeholder="Your name..">
                 </div>
                 <div class="flex-column">
@@ -98,13 +98,13 @@
             </header>
             <section class="content">
                 <div class="box">
-                    <div class="ingredients-list">
-                        <div><i class="fa fa-angle-double-right"></i> 300 g brown rice</div>
-                        <div><i class="fa fa-angle-double-right"></i> 2 pc red onions</div>
-                        <div><i class="fa fa-angle-double-right"></i> 1 pc fresh red chilli</div>
-                        <div><i class="fa fa-angle-double-right"></i> 25 g unsalted butter</div>
-                        <div><i class="fa fa-angle-double-right"></i> 6 pc large free-range eggs</div>
-                    </div>
+                    <ul class="ingredients-list">
+                        <li><i class="fa fa-angle-double-right"></i> 300 g brown rice</li>
+                        <li><i class="fa fa-angle-double-right"></i> 2 pc red onions</li>
+                        <li><i class="fa fa-angle-double-right"></i> 1 pc fresh red chilli</li>
+                        <li><i class="fa fa-angle-double-right"></i> 25 g unsalted butter</li>
+                        <li><i class="fa fa-angle-double-right"></i> 6 pc large free-range eggs</li>
+                    </ul>
                     <div class="recipe-options">
                         <div>
                             <input type="number" name="quantity" placeholder="Qty." min="1" size="4">
